--- a/zftal-hrm-core-common/pom.xml
+++ b/zftal-hrm-core-common/pom.xml
@@ -28,14 +28,32 @@
 		</resources>
 	</build>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
-	</properties>	
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>zftal-core-action</artifactId>
 			<version>${project.version}</version>
+		</dependency>-->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zftal-core-dao</artifactId>
+			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>zftal-core-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
@@ -54,7 +72,7 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-digester3</artifactId>
 			<version>3.2</version>
-			
+
 			<exclusions>
            		<exclusion>
                			<groupId>asm</groupId>
@@ -65,7 +83,7 @@
 			      		<artifactId>cglib</artifactId>
 			      </exclusion>
        		</exclusions>
-			
+
 		</dependency>
 		<dependency>
 		  <groupId>org.quartz-scheduler</groupId>
@@ -100,7 +118,7 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.zfsoft.zfca</groupId>
 			<artifactId>zfcaclient</artifactId>
@@ -108,7 +126,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>apache-oro</groupId>
 			<artifactId>jakarta-oro</artifactId>
@@ -122,24 +140,24 @@
         	<version>1.4.3</version>
         	<type>jar</type>
 			<scope>compile</scope>
-    	</dependency> 
-    	
-    	
+    	</dependency>
+
+
     	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.3</version>
 		</dependency>
-    	
-    	
+
+
     	<!-- https://mvnrepository.com/artifact/cglib/cglib -->
 		<dependency>
 		    <groupId>cglib</groupId>
 		    <artifactId>cglib</artifactId>
 		    <version>2.2.2</version>
 		</dependency>
-    	
-    	
+
+
 	</dependencies>
 </project>
