--- a/zftal-sjzx-web/pom.xml
+++ b/zftal-sjzx-web/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>zftal-parent</artifactId>
@@ -12,8 +12,9 @@
 	<packaging>war</packaging>
 	<name>zftal-sjzx-web</name>
 
-	<dependencies>
-	</dependencies>
+	<properties>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
 
 	<build>
 		<sourceDirectory>src/java</sourceDirectory>
